--- a/.github/workflows/pages-deploy.yaml
+++ b/.github/workflows/pages-deploy.yaml
@@ -1,3 +1,4 @@
+---
 name: Build and Deploy Pages Site
 
 on:
@@ -22,22 +23,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
 
       - name: Build md Index
-        run: |
-          import json
-          from pathlib import Path
-          cfg = json.loads(Path("config.json").read_text())
-          for c in cfg["postColumns"]:
-              d = Path(c["dir"])
-              if d.is_dir():
-                  (d / "index.json").write_text(
-                      json.dumps(sorted(p.name for p in d.glob("*.md")), indent=2)
-                  )
+        run: python .github/workflows/build_index.py
         shell: python
 
       - name: Upload Pages
@@ -50,4 +44,4 @@ jobs:
         uses: actions/deploy-pages@v4
 
       - name: Report Pages URL
-        run: echo "Pages URL: ${{ steps.deployment.outputs.page_url }}"
+        run: echo "Pages URL - ${{ steps.deployment.outputs.page_url }}"
