--- a/.github/workflows/pages-deploy.yaml
+++ b/.github/workflows/pages-deploy.yaml
@@ -1,4 +1,3 @@
----
 name: Build and Deploy Pages Site
 
 on:
@@ -18,8 +17,7 @@ concurrency:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
-    environment:
-      name: github-pages
+    environment: ${{ github.ref == 'refs/heads/main' && 'github-pages' || 'pages-preview' }}
 
     steps:
       - uses: actions/checkout@v4
@@ -43,4 +41,4 @@ jobs:
         uses: actions/deploy-pages@v4
 
       - name: Report Pages URL
-        run: echo "Pages URL - ${{ steps.deployment.outputs.page_url }}"
+        run: echo "Pages URL: ${{ steps.deployment.outputs.page_url }}"
