--- a/.github/workflows/pages-deploy.yaml
+++ b/.github/workflows/pages-deploy.yaml
@@ -17,7 +17,7 @@ concurrency:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
-    environment: ${{ github.ref == 'refs/heads/main' && 'github-pages' || 'pages-preview' }}
+    environment: github-pages
 
     steps:
       - uses: actions/checkout@v4
@@ -34,11 +34,14 @@ jobs:
       - name: Upload Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .
+          path: ${{ github.event_name == 'pull_request' && format('pr-{}', github.event.number) || '.' }}
 
       - name: Deploy Pages
         id: deployment
         uses: actions/deploy-pages@v4
 
       - name: Report Pages URL
-        run: echo "Pages URL - ${{ steps.deployment.outputs.page_url }}"
+        run: |
+          URL="${{ steps.deployment.outputs.page_url }}"
+          [ "${GITHUB_EVENT_NAME}" = "pull_request" ] && URL="$URL/pr-${{ github.event.number }}/"
+          echo "Pages URL - $URL"
