--- a/.github/workflows/pages-deploy.yaml
+++ b/.github/workflows/pages-deploy.yaml
@@ -30,10 +30,17 @@ jobs:
       - name: Build md Index
         run: python .github/workflows/build_index.py
 
+      # Copy site into PR folder if this is a pull request
+      - name: Prepare PR folder
+        if: github.event_name == 'pull_request'
+        run: |
+          mkdir -p pr-${{ github.event.number }}
+          cp -r * pr-${{ github.event.number }}/
+
       - name: Upload Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ${{ github.event_name == 'pull_request' && format('pr-{}', github.event.number) || '.' }}
+          path: ${{ github.event_name == 'pull_request' && 'pr-' || '.' }}${{ github.event_name == 'pull_request' && github.event.number || '' }}
 
       - name: Deploy Pages
         id: deployment
