--- a/.github/workflows/pages-deploy.yaml
+++ b/.github/workflows/pages-deploy.yaml
@@ -39,4 +39,4 @@ jobs:
         uses: actions/deploy-pages@v4
 
       - name: Report Pages URL
-        run: echo "Pages URL: ${{ steps.deployment.outputs.page_url }}"
+        run: echo "Pages URL - ${{ steps.deployment.outputs.page_url }}"
