--- a/.github/workflows/pages-deploy.yaml
+++ b/.github/workflows/pages-deploy.yaml
@@ -3,7 +3,6 @@ name: Build and Deploy Pages Site
 on:
   push:
     branches: [main]
-  pull_request:
 
 permissions:
   contents: read
@@ -17,7 +16,7 @@ concurrency:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
-    environment: ${{ github.ref == 'refs/heads/main' && 'github-pages' || 'pages-preview' }}
+    environment: github-pages
 
     steps:
       - uses: actions/checkout@v4
